--- a/index.html
+++ b/index.html
@@ -12,7 +12,10 @@
 
   <div class="canvasClass" id="canvasDiv">
     <script src="script.js"></script>
-    <script src="particle.js"></script>
+    <script src="q_to_p.js"></script>
+    <script src="a_to_l.js"></script>
+    <script src="z_to_m.js"></script>
+    <script src="effect.js"></script>
 
   </div>
 
@@ -39,7 +42,6 @@
 </head>
 
 <body>
-
 
 
 
