--- a/index.html
+++ b/index.html
@@ -25,19 +25,7 @@
   </script>
 
 
-  <!-- load fonts -->
-
-  <!-- title font -->
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Megrim&family=Tourney:wght@900&display=swap" rel="stylesheet">
-
-  <!-- subtitle font -->
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Comfortaa:wght@300&display=swap" rel="stylesheet">
-
-  <title>Final Project </title>
+  <title>Neon Keys</title>
 
 </head>
 
